--- a/KwikHands/GameAssets/cone.xaml
+++ b/KwikHands/GameAssets/cone.xaml
@@ -4,7 +4,7 @@
         <Model3DGroup>
             <Model3DGroup.Transform>
                 <Transform3DGroup>
-                    <ScaleTransform3D ScaleX="1.0" ScaleY="1.0" ScaleZ="1.0"/>
+                    <ScaleTransform3D ScaleX=".75" ScaleY=".75" ScaleZ=".75"/>
                     <RotateTransform3D>
                         <RotateTransform3D.Rotation>
                             <AxisAngleRotation3D  Axis="0.000000,-0.000000,0.000000" Angle="0.0"/>
