--- a/KwikHands/MainWindow.xaml
+++ b/KwikHands/MainWindow.xaml
@@ -1,17 +1,12 @@
 ﻿<Window x:Class="KwikHands.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="860" Width="525">
-    <StackPanel>
-        <StackPanel x:Name="pnlCameraView" Width="400" Height="Auto">
-            <Image x:Name="imgCameraView"  Width="400" Height="300"></Image>
-            <TextBlock x:Name="txtFPS"></TextBlock>
-            <TextBlock x:Name="txtLocation"></TextBlock>
-        </StackPanel>
-        <Viewport3D x:Name="Viewport" Height="400">
+        Title="MainWindow" Height="Auto" Width="525">
+    <Grid Background="Gray">
+        <Viewport3D x:Name="Viewport" Height="Auto" Width="Auto" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.Row="0">
             <Viewport3D.Camera>
-                <PerspectiveCamera FieldOfView="66" Position="0,-20,3" NearPlaneDistance="0.10000000149011612"
-                                   FarPlaneDistance="100.0" LookDirection="0,0.610666,-.1" UpDirection="0.000000,0.000000,1.000000"/>
+                <PerspectiveCamera x:Name="Camera" FieldOfView="66" Position="2,-25,8" NearPlaneDistance="0.10000000149011612"
+                                   FarPlaneDistance="200.0" LookDirection="0,0.8,-.2" UpDirection="0.000000,0.000000,1.000000"/>
             </Viewport3D.Camera>
             <Viewport3D.Children>
                 <ModelVisual3D>
@@ -21,7 +16,12 @@
                 </ModelVisual3D>
             </Viewport3D.Children>
         </Viewport3D>
-        <StackPanel>
+        <StackPanel x:Name="pnlCameraView" Width="300" Height="Auto" Grid.Row="0" VerticalAlignment="Top" HorizontalAlignment="Right">
+            <Image x:Name="imgCameraView"  Width="300" Height="200"></Image>
+            <TextBlock x:Name="txtFPS"></TextBlock>
+            <TextBlock x:Name="txtLocation"></TextBlock>
+        </StackPanel>
+        <StackPanel Grid.Row="0" x:Name="Controls"  VerticalAlignment="Bottom">
             <Button x:Name="btnToggleCameraView" Width="Auto">
                 <Label>Toggle Camera View</Label>
             </Button>
@@ -34,6 +34,9 @@
             <Button x:Name="btnToggleBoxes" Width="Auto">
                 <Label>Toggle Tracking Boxes</Label>
             </Button>
+            <Slider x:Name="XSlider" Maximum="1" Minimum="-1" SmallChange="0.02"></Slider>
+            <Slider x:Name="YSlider" Maximum="1" Minimum="-1" SmallChange="0.02"></Slider>
+            <Slider x:Name="ZSlider" Maximum="1" Minimum="-1" SmallChange="0.02"></Slider>
         </StackPanel>
-    </StackPanel>
+    </Grid>
 </Window>
