--- a/KwikHands/MainWindow.xaml
+++ b/KwikHands/MainWindow.xaml
@@ -2,8 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="Auto" Width="525">
-    <Grid Background="Gray">
-        <Viewport3D x:Name="Viewport" Height="Auto" Width="Auto" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.Row="0">
+    <Grid Background="Gray" x:Name="HUDGrid">
+            <Viewport3D x:Name="Viewport" Height="Auto" Width="Auto" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.Row="0">
             <Viewport3D.Camera>
                 <PerspectiveCamera x:Name="Camera" FieldOfView="66" Position="2,-25,8" NearPlaneDistance="0.10000000149011612"
                                    FarPlaneDistance="200.0" LookDirection="0,0.8,-.2" UpDirection="0.000000,0.000000,1.000000"/>
@@ -16,6 +16,7 @@
                 </ModelVisual3D>
             </Viewport3D.Children>
         </Viewport3D>
+        <Canvas x:Name="HUD" Background="{x:Null}"></Canvas>
         <StackPanel x:Name="pnlCameraView" Width="300" Height="Auto" Grid.Row="0" VerticalAlignment="Top" HorizontalAlignment="Right">
             <Image x:Name="imgCameraView"  Width="300" Height="200"></Image>
             <TextBlock x:Name="txtFPS"></TextBlock>
