--- a/KwikHands/MainWindow.xaml
+++ b/KwikHands/MainWindow.xaml
@@ -1,43 +1,22 @@
 ﻿<Window x:Class="KwikHands.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:hlx="clr-namespace:HelixToolkit.Wpf;assembly=HelixToolkit.Wpf"
         Title="MainWindow" Height="Auto" Width="525">
     <Grid Background="Gray" x:Name="HUDGrid">
-            <Viewport3D x:Name="Viewport" Height="Auto" Width="Auto" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.Row="0">
-            <Viewport3D.Camera>
-                <PerspectiveCamera x:Name="Camera" FieldOfView="66" Position="2,-25,8" NearPlaneDistance="0.10000000149011612"
-                                   FarPlaneDistance="200.0" LookDirection="0,0.8,-.2" UpDirection="0.000000,0.000000,1.000000"/>
-            </Viewport3D.Camera>
-            <Viewport3D.Children>
+        <hlx:HelixViewport3D x:Name="hlxViewport" Height="Auto" Width="Auto" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.Row="0" ShowViewCube="False">
+            <hlx:HelixViewport3D.Camera>
+                <PerspectiveCamera x:Name="hlxCamera" FieldOfView="66" Position="0,-25,8" NearPlaneDistance="0.10000000149011612"
+                                   FarPlaneDistance="300.0" LookDirection="0,0.8,-.2" UpDirection="0.000000,0.000000,1.000000"/>
+            </hlx:HelixViewport3D.Camera>
+            <hlx:HelixViewport3D.Children>
                 <ModelVisual3D>
                     <ModelVisual3D.Content>
                         <PointLight Position="4.076245,1.005454,5.903862" Color="#ffffff"/>
                     </ModelVisual3D.Content>
                 </ModelVisual3D>
-            </Viewport3D.Children>
-        </Viewport3D>
+            </hlx:HelixViewport3D.Children>
+        </hlx:HelixViewport3D>
         <Canvas x:Name="HUD" Background="{x:Null}"></Canvas>
-        <StackPanel x:Name="pnlCameraView" Width="300" Height="Auto" Grid.Row="0" VerticalAlignment="Top" HorizontalAlignment="Right">
-            <Image x:Name="imgCameraView"  Width="300" Height="200"></Image>
-            <TextBlock x:Name="txtFPS"></TextBlock>
-            <TextBlock x:Name="txtLocation"></TextBlock>
-        </StackPanel>
-        <StackPanel Grid.Row="0" x:Name="Controls"  VerticalAlignment="Bottom">
-            <Button x:Name="btnToggleCameraView" Width="Auto">
-                <Label>Toggle Camera View</Label>
-            </Button>
-            <Button x:Name="btnToggleLiveImage" Width="Auto">
-                <Label>Toggle Live Image</Label>
-            </Button>
-            <Button x:Name="btnToggleTracking" Width="Auto">
-                <Label>Toggle Tracking</Label>
-            </Button>
-            <Button x:Name="btnToggleBoxes" Width="Auto">
-                <Label>Toggle Tracking Boxes</Label>
-            </Button>
-            <Slider x:Name="XSlider" Maximum="1" Minimum="-1" SmallChange="0.02"></Slider>
-            <Slider x:Name="YSlider" Maximum="1" Minimum="-1" SmallChange="0.02"></Slider>
-            <Slider x:Name="ZSlider" Maximum="1" Minimum="-1" SmallChange="0.02"></Slider>
-        </StackPanel>
     </Grid>
 </Window>
